solved the button clear filter, the button responsive size in section 3 and i also fixed the images not showing too

--- a/css/style.css
+++ b/css/style.css
@@ -105,10 +105,6 @@ header a {
   border-radius: 50%;
 }
 
-.app-content button {
-  width: 3em;
-}
-
 .main-content button {
   font-weight: bold;
 }
